// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`5 x 4 1`] = `
Array [
  Object {
    "column": 0,
    "line": 0,
    "offset": 0,
  },
  Object {
    "column": 1,
    "line": 0,
    "offset": 1,
  },
  Object {
    "column": 0,
    "line": 1,
    "offset": 5,
  },
  Object {
    "column": 0,
    "line": 2,
    "offset": 10,
  },
  Object {
    "column": 1,
    "line": 1,
    "offset": 6,
  },
  Object {
    "column": 2,
    "line": 0,
    "offset": 2,
  },
  Object {
    "column": 3,
    "line": 0,
    "offset": 3,
  },
  Object {
    "column": 2,
    "line": 1,
    "offset": 7,
  },
  Object {
    "column": 1,
    "line": 2,
    "offset": 11,
  },
  Object {
    "column": 0,
    "line": 3,
    "offset": 15,
  },
  Object {
    "column": 1,
    "line": 3,
    "offset": 16,
  },
  Object {
    "column": 2,
    "line": 2,
    "offset": 12,
  },
  Object {
    "column": 3,
    "line": 1,
    "offset": 8,
  },
  Object {
    "column": 4,
    "line": 0,
    "offset": 4,
  },
  Object {
    "column": 4,
    "line": 1,
    "offset": 9,
  },
  Object {
    "column": 3,
    "line": 2,
    "offset": 13,
  },
  Object {
    "column": 2,
    "line": 3,
    "offset": 17,
  },
  Object {
    "column": 3,
    "line": 3,
    "offset": 18,
  },
  Object {
    "column": 4,
    "line": 2,
    "offset": 14,
  },
  Object {
    "column": 4,
    "line": 3,
    "offset": 19,
  },
]
`;

exports[`5 x 5 1`] = `
Array [
  Object {
    "column": 0,
    "line": 0,
    "offset": 0,
  },
  Object {
    "column": 1,
    "line": 0,
    "offset": 1,
  },
  Object {
    "column": 0,
    "line": 1,
    "offset": 5,
  },
  Object {
    "column": 0,
    "line": 2,
    "offset": 10,
  },
  Object {
    "column": 1,
    "line": 1,
    "offset": 6,
  },
  Object {
    "column": 2,
    "line": 0,
    "offset": 2,
  },
  Object {
    "column": 3,
    "line": 0,
    "offset": 3,
  },
  Object {
    "column": 2,
    "line": 1,
    "offset": 7,
  },
  Object {
    "column": 1,
    "line": 2,
    "offset": 11,
  },
  Object {
    "column": 0,
    "line": 3,
    "offset": 15,
  },
  Object {
    "column": 0,
    "line": 4,
    "offset": 20,
  },
  Object {
    "column": 1,
    "line": 3,
    "offset": 16,
  },
  Object {
    "column": 2,
    "line": 2,
    "offset": 12,
  },
  Object {
    "column": 3,
    "line": 1,
    "offset": 8,
  },
  Object {
    "column": 4,
    "line": 0,
    "offset": 4,
  },
  Object {
    "column": 4,
    "line": 1,
    "offset": 9,
  },
  Object {
    "column": 3,
    "line": 2,
    "offset": 13,
  },
  Object {
    "column": 2,
    "line": 3,
    "offset": 17,
  },
  Object {
    "column": 1,
    "line": 4,
    "offset": 21,
  },
  Object {
    "column": 2,
    "line": 4,
    "offset": 22,
  },
  Object {
    "column": 3,
    "line": 3,
    "offset": 18,
  },
  Object {
    "column": 4,
    "line": 2,
    "offset": 14,
  },
  Object {
    "column": 4,
    "line": 3,
    "offset": 19,
  },
  Object {
    "column": 3,
    "line": 4,
    "offset": 23,
  },
  Object {
    "column": 4,
    "line": 4,
    "offset": 24,
  },
]
`;

exports[`throw error with non-integar height 1`] = `"Expected height to be an integer, but received 1.5"`;
